--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "export": "next build && next export",
+    "deploy": "next build && wrangler pages deploy .next --project-name=portfolio"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.4",
