fix: fix deploy.

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "nodemailer": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "sharp": "^0.34.2",
     "tailwind-merge": "^3.3.0"
   },
   "devDependencies": {
