--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "export": "next build && next export",
-    "deploy": "next build && wrangler pages deploy .next --project-name=portfolio"
+    "deploy": "next build && wrangler pages deploy .next --project-name=portfolio --branch=main"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.4",
