--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "export": "next build && next export",
-    "deploy": "next build && wrangler deploy --assets=.next"
+    "deploy": "next build && wrangler deploy --assets=.next",
+    "postbuild": "npx @cloudflare/next-on-pages"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.4",
@@ -28,6 +29,7 @@
     "tailwind-merge": "^3.3.0"
   },
   "devDependencies": {
+    "@cloudflare/next-on-pages": "^1.13.12",
     "@types/node": "^20.11.16",
     "@types/react": "^18.2.52",
     "@types/react-dom": "^18.2.18",
