--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "deploy": "npx wrangler pages deploy .next"
+    "deploy": "npx wrangler deploy"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.4",
