--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "deploy": "npx wrangler deploy"
+    "deploy": "npm run build && wrangler pages deploy out"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.4",
@@ -24,7 +24,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sharp": "^0.34.2",
-    "tailwind-merge": "^3.3.0"
+    "tailwind-merge": "^3.3.0",
+    "webpack": "^5.90.3",
+    "critters": "^0.0.20"
   },
   "devDependencies": {
     "@types/node": "^20.11.16",
