--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,9 +7,8 @@ compatibility_flags = ["nodejs_compat"]
 
 [build]
 command = "npm run build"
+upload.format = "directory"
+upload.dir = "out"
 
 [env.production]
 workers_dev = true
-
-[build.upload]
-format = "service-worker"
