--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,8 +1,8 @@
-account_id = "e43cab1aff32487fdabee8dbea58a442"
+fix deploy.account_id = "e43cab1aff32487fdabee8dbea58a442"
 name = "portfolio"
 compatibility_date = "2025-06-07"
 main = ".next/standalone/server.js"
-site = { bucket = ".next/static" }
+site = { bucket = "./out" }
 compatibility_flags = ["nodejs_compat"]
 
 [build]
