--- a/package.json
+++ b/package.json
@@ -2,41 +2,40 @@
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=20.10.0"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "deploy": "npm run build && wrangler pages deploy out"
+    "deploy": "npm run build && npx wrangler pages deploy out"
   },
   "dependencies": {
-    "@headlessui/react": "^2.2.4",
-    "@heroicons/react": "^2.2.0",
-    "@radix-ui/react-slot": "^1.2.3",
-    "@types/nodemailer": "^6.4.17",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "framer-motion": "^11.18.2",
-    "lucide-react": "^0.513.0",
-    "next": "14.1.0",
-    "next-themes": "^0.4.6",
-    "nodemailer": "^7.0.3",
+    "@cloudflare/workers-types": "^4.20240517.0",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.12",
+    "@types/node": "^20.11.25",
+    "@types/react": "^18.2.64",
+    "@types/react-dom": "^18.2.21",
+    "autoprefixer": "^10.4.18",
+    "axios": "^1.6.7",
+    "critters": "^0.0.20",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.1.0",
+    "framer-motion": "^11.0.8",
+    "next": "^14.1.0",
+    "postcss": "^8.4.35",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sharp": "^0.34.2",
-    "tailwind-merge": "^3.3.0",
-    "webpack": "^5.90.3",
-    "critters": "^0.0.20"
+    "react-icons": "^5.0.1",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.4.2",
+    "webpack": "^5.90.3"
   },
   "devDependencies": {
-    "@types/node": "^20.11.16",
-    "@types/react": "^18.2.52",
-    "@types/react-dom": "^18.2.18",
-    "autoprefixer": "^10.4.17",
-    "eslint": "^8.56.0",
-    "eslint-config-next": "14.1.0",
-    "postcss": "^8.4.33",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.3.3"
+    "wrangler": "^4.19.1"
   }
 }
