--- a/package.json
+++ b/package.json
@@ -15,21 +15,27 @@
   "dependencies": {
     "@emotion/react": "11.11.4",
     "@emotion/styled": "11.11.0",
+    "@heroicons/react": "2.1.1",
     "@mui/material": "5.15.12",
     "@types/node": "20.11.25",
     "@types/react": "18.2.64",
     "@types/react-dom": "18.2.21",
     "autoprefixer": "10.4.18",
     "axios": "1.6.7",
+    "class-variance-authority": "0.7.0",
+    "clsx": "2.1.0",
     "critters": "0.0.20",
     "eslint": "8.57.0",
     "eslint-config-next": "14.1.0",
     "framer-motion": "11.0.8",
+    "lucide-react": "0.344.0",
     "next": "14.1.0",
+    "next-themes": "0.2.1",
     "postcss": "8.4.35",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "5.0.1",
+    "tailwind-merge": "2.2.1",
     "tailwindcss": "3.4.1",
     "typescript": "5.4.2",
     "webpack": "5.90.3"
