--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@emotion/styled": "11.11.0",
     "@heroicons/react": "2.1.1",
     "@mui/material": "5.15.12",
+    "@radix-ui/react-slot": "1.0.2",
     "@types/node": "20.11.25",
+    "@types/nodemailer": "6.4.14",
     "@types/react": "18.2.64",
     "@types/react-dom": "18.2.21",
     "autoprefixer": "10.4.18",
@@ -31,6 +33,7 @@
     "lucide-react": "0.344.0",
     "next": "14.1.0",
     "next-themes": "0.2.1",
+    "nodemailer": "6.9.12",
     "postcss": "8.4.35",
     "react": "18.2.0",
     "react-dom": "18.2.0",
