--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "deploy": "npm run build && npx wrangler pages deploy out"
+    "deploy": "npm run build && npx wrangler pages deploy out --project-name portfolio"
   },
   "dependencies": {
     "@emotion/react": "11.11.4",
