--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,7 @@
 name = "portfolio"
-compatibility_date = "2025-06-07"
+compatibility_date = "2024-06-08"
 pages_build_output_dir = "out"
 
 [env.production]
-workers_dev = true
+name = "portfolio"
+compatibility_date = "2024-06-08"
