--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "deploy": "npm run build && wrangler deploy"
   },
   "dependencies": {
+    "@cloudflare/kv-asset-handler": "^0.3.0",
+    "itty-router": "^4.0.27",
     "@emotion/react": "11.11.4",
     "@emotion/styled": "11.11.0",
     "@heroicons/react": "2.1.1",
@@ -43,6 +46,6 @@
     "webpack": "5.90.3"
   },
   "devDependencies": {
-    "wrangler": "4.19.1"
+    "wrangler": "^3.28.1"
   }
 }
