--- a/package.json
+++ b/package.json
@@ -13,39 +13,36 @@
     "deploy": "npm run build && wrangler deploy"
   },
   "dependencies": {
-    "@cloudflare/kv-asset-handler": "^0.3.0",
-    "itty-router": "^4.0.27",
+    "@cloudflare/kv-asset-handler": "0.3.0",
+    "@cloudflare/workers-types": "4.20240320.1",
+    "itty-router": "4.0.27",
     "@emotion/react": "11.11.4",
     "@emotion/styled": "11.11.0",
     "@heroicons/react": "2.1.1",
     "@mui/material": "5.15.12",
     "@radix-ui/react-slot": "1.0.2",
-    "@types/node": "20.11.25",
     "@types/nodemailer": "6.4.14",
-    "@types/react": "18.2.64",
-    "@types/react-dom": "18.2.21",
-    "autoprefixer": "10.4.18",
-    "axios": "1.6.7",
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.0",
-    "critters": "0.0.20",
-    "eslint": "8.57.0",
-    "eslint-config-next": "14.1.0",
     "framer-motion": "11.0.8",
     "lucide-react": "0.344.0",
     "next": "14.1.0",
     "next-themes": "0.2.1",
     "nodemailer": "6.9.12",
-    "postcss": "8.4.35",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "5.0.1",
-    "tailwind-merge": "2.2.1",
-    "tailwindcss": "3.4.1",
-    "typescript": "5.4.2",
-    "webpack": "5.90.3"
+    "tailwind-merge": "2.2.1"
   },
   "devDependencies": {
-    "wrangler": "^3.28.1"
+    "@types/node": "20.11.25",
+    "@types/react": "18.2.64",
+    "@types/react-dom": "18.2.21",
+    "autoprefixer": "10.4.18",
+    "eslint": "8.57.0",
+    "eslint-config-next": "14.1.0",
+    "postcss": "8.4.35",
+    "tailwindcss": "3.4.1",
+    "typescript": "5.4.2",
+    "wrangler": "3.28.1"
   }
 }
