--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,7 @@
 name = "portfolio"
 main = "src/index.ts"
 compatibility_date = "2024-06-08"
+compatibility_flags = ["nodejs_compat"]
 
 [build]
 command = "npm run build"
