--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
   "dependencies": {
     "@cloudflare/kv-asset-handler": "0.3.0",
     "@cloudflare/workers-types": "4.20240320.1",
-    "itty-router": "4.0.27",
     "@emotion/react": "11.11.4",
     "@emotion/styled": "11.11.0",
     "@heroicons/react": "2.1.1",
@@ -25,12 +24,14 @@
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.0",
     "framer-motion": "11.0.8",
+    "itty-router": "4.0.27",
     "lucide-react": "0.344.0",
     "next": "14.1.0",
     "next-themes": "0.2.1",
     "nodemailer": "6.9.12",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "resend": "^4.5.2",
     "tailwind-merge": "2.2.1"
   },
   "devDependencies": {
